--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -7,4 +7,8 @@
     <color name="teal_700">#FF018786</color>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
+    <color name="whiteBackground">#C6C6C6</color>
+    <color name="whiteButton">#F9F9F9</color>
+    <color name="playerOne">#FF03DAC5</color>
+    <color name="playerTwo">#FFE91E63</color>
 </resources>
