--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -7,13 +7,25 @@
     android:background="@color/black"
     tools:context=".MainActivity">
 
+    <ImageButton
+        android:id="@+id/settings"
+        android:layout_width="50dp"
+        android:layout_height="50dp"
+        android:background="#673AB7"
+        android:onClick="showSettings"
+        android:scaleType="fitCenter"
+        android:src="@drawable/settings_icon"
+        android:text=""
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
     <Button
         android:id="@+id/confirmButton"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="8dp"
         android:layout_marginBottom="24dp"
-        android:background="#4CAF50"
+        android:background="@color/purpleButton"
         android:onClick="confirmMove"
         android:text="CONFIRM"
         android:textSize="24sp"
@@ -28,7 +40,7 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="8dp"
         android:layout_marginBottom="24dp"
-        android:background="#4CAF50"
+        android:background="@color/purpleButton"
         android:onClick="resetBoard"
         android:text="RESET"
         android:textSize="24sp"
