--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -9,6 +9,7 @@
     <color name="white">#FFFFFFFF</color>
     <color name="whiteBackground">#C6C6C6</color>
     <color name="whiteButton">#F9F9F9</color>
+    <color name="purpleButton">#FF673AB7</color>
     <color name="playerOne">#FF03DAC5</color>
     <color name="playerTwo">#FFE91E63</color>
     <color name="playerThree">#FFFF5722</color>
